# pygame_project

./: README.md  game.py  main.py  obstacle.py  player.py  pyproject.toml  target.py
