[tool.poetry]
name = "pygame-project"
version = "0.1.0"
description = ""
authors = ["<Anton Vedischev> <<vedishchevanton@gmail.com>>"]
readme = "README.md"
packages = [{include = "pygame_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.0"
game = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
